# aoc25

./: .gitignore  Cargo.toml  Readme.md
src/: lib.rs  main.rs
src/days/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  mod.rs
